handle 404 response and add intermediata metadata dumps on mass scraping

--- a/corpus_building/corpus_building_mass_scraping_press-releases.ipynb
+++ b/corpus_building/corpus_building_mass_scraping_press-releases.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "4b5c5d7a-f727-4385-8c30-49347b73d692",
    "metadata": {
     "editable": true,
@@ -92,7 +92,7 @@
    },
    "outputs": [],
    "source": [
-    "import requests, pathlib, time, re, logging, textwrap\n",
+    "import requests, pathlib, time, re, logging, textwrap, csv\n",
     "from bs4 import BeautifulSoup\n",
     "import pandas as pd\n",
     "from tqdm import tqdm"
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "f973641b-67cf-4a7c-8f28-a51b92e03e07",
    "metadata": {
     "editable": true,
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "6d83d1d3-86af-41db-a8db-b14b270d17bb",
    "metadata": {
     "editable": true,
@@ -205,19 +205,46 @@
    "outputs": [],
    "source": [
     "# -- helper -----------------------------------------------------------------\n",
+    "def get_soup(\n",
+    "    url: str,\n",
+    "    *,\n",
+    "    max_retries: int = 2,\n",
+    "    sleep_s: float = 5.0,\n",
+    ") -> BeautifulSoup | None:\n",
+    "    \"\"\"\n",
+    "    Lädt eine URL und gibt BeautifulSoup zurück.\n",
+    "    - Bei 404/410 wird nach *max_retries* Versuchen endgültig None geliefert.\n",
+    "    - Bei allen anderen Fehlern wird bis *max_retries* weiterprobiert.\n",
+    "    \"\"\"\n",
+    "    for attempt in range(1, max_retries + 1):\n",
+    "        try:\n",
+    "            r = requests.get(\n",
+    "                url,\n",
+    "                timeout=20,\n",
+    "                headers={\"User-Agent\": \"Mozilla/5.0 (QuadrigaScraper/1.0)\"},\n",
+    "            )\n",
+    "        except requests.RequestException as err:\n",
+    "            logging.warning(\"Netzwerkfehler %s – Versuch %d/%d\", err, attempt, max_retries)\n",
+    "            time.sleep(sleep_s)\n",
+    "            continue\n",
     "\n",
-    "def get_soup(url: str) -> BeautifulSoup:\n",
-    "    \"\"\"Download a page and return BeautifulSoup (retry politely on transient errors).\"\"\"\n",
-    "    while True:\n",
-    "        r = requests.get(\n",
-    "            url,\n",
-    "            timeout=20,\n",
-    "            headers={\"User-Agent\": \"Mozilla/5.0 (compatible; QuadrigaScraper/1.0)\"}\n",
-    "        )\n",
     "        if r.status_code == 200:\n",
     "            return BeautifulSoup(r.text, \"lxml\")\n",
-    "        logging.warning(\"Status %s on %s – retrying in 5 s\", r.status_code, url)\n",
-    "        time.sleep(5)\n",
+    "\n",
+    "        # Dauerhafte Fehler: 404 (Not Found) oder 410 (Gone)\n",
+    "        if r.status_code in (404, 410):\n",
+    "            logging.info(\"❌ %s liefert %s – überspringe.\", url, r.status_code)\n",
+    "            return None\n",
+    "\n",
+    "        logging.warning(\n",
+    "            \"Status %s auf %s – Versuch %d/%d, Wartezeit %ss\",\n",
+    "            r.status_code, url, attempt, max_retries, sleep_s\n",
+    "        )\n",
+    "        time.sleep(sleep_s)\n",
+    "\n",
+    "    logging.error(\"🚨 %s nach %d Versuchen nicht erreichbar – überspringe.\", url, max_retries)\n",
+    "    return None\n",
+    "\n",
     "\n",
     "def slugify(text_: str, maxlen: int = 60) -> str:\n",
     "    \"\"\"Rough filename-safe slug for headlines.\"\"\"\n",
@@ -282,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "577fdf92-4f28-4a8a-8dfa-5c607098d6a9",
    "metadata": {
     "editable": true,
@@ -291,141 +318,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 10 rows on the page.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Rows: 100%|█████████████████████████████████████| 10/10 [00:04<00:00,  2.06it/s]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>ressort</th>\n",
-       "      <th>title</th>\n",
-       "      <th>pr_url</th>\n",
-       "      <th>filename_html</th>\n",
-       "      <th>filename_txt</th>\n",
-       "      <th>n_tokens</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>17.06.2025</td>\n",
-       "      <td>Bezirksamt Reinickendorf</td>\n",
-       "      <td>Reinickendorf gedenkt der Opfer des Volksaufst...</td>\n",
-       "      <td>https://www.berlin.de/ba-reinickendorf/aktuell...</td>\n",
-       "      <td>1570899.html</td>\n",
-       "      <td>1570899.txt</td>\n",
-       "      <td>729</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>17.06.2025</td>\n",
-       "      <td>Bezirksamt Charlottenburg-Wilmersdorf</td>\n",
-       "      <td>Starker Befall mit Eichenprozessionsspinnern i...</td>\n",
-       "      <td>https://www.berlin.de/ba-charlottenburg-wilmer...</td>\n",
-       "      <td>1570886.html</td>\n",
-       "      <td>1570886.txt</td>\n",
-       "      <td>1313</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>17.06.2025</td>\n",
-       "      <td>Bezirksamt Marzahn-Hellersdorf</td>\n",
-       "      <td>Sichere Schulwege digital: Das neue „Schulwegp...</td>\n",
-       "      <td>https://www.berlin.de/ba-marzahn-hellersdorf/a...</td>\n",
-       "      <td>1570882.html</td>\n",
-       "      <td>1570882.txt</td>\n",
-       "      <td>880</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>17.06.2025</td>\n",
-       "      <td>Bezirksamt Spandau</td>\n",
-       "      <td>Modernisiertes Spielfeld am Cosmarweg stärkt B...</td>\n",
-       "      <td>https://www.berlin.de/ba-spandau/aktuelles/pre...</td>\n",
-       "      <td>1570883.html</td>\n",
-       "      <td>1570883.txt</td>\n",
-       "      <td>786</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>17.06.2025</td>\n",
-       "      <td>Bezirksamt Marzahn-Hellersdorf</td>\n",
-       "      <td>Halt, Beratung und konkrete Hilfe für junge Me...</td>\n",
-       "      <td>https://www.berlin.de/ba-marzahn-hellersdorf/a...</td>\n",
-       "      <td>1570857.html</td>\n",
-       "      <td>1570857.txt</td>\n",
-       "      <td>890</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         date                                ressort  \\\n",
-       "0  17.06.2025               Bezirksamt Reinickendorf   \n",
-       "1  17.06.2025  Bezirksamt Charlottenburg-Wilmersdorf   \n",
-       "2  17.06.2025         Bezirksamt Marzahn-Hellersdorf   \n",
-       "3  17.06.2025                     Bezirksamt Spandau   \n",
-       "4  17.06.2025         Bezirksamt Marzahn-Hellersdorf   \n",
-       "\n",
-       "                                               title  \\\n",
-       "0  Reinickendorf gedenkt der Opfer des Volksaufst...   \n",
-       "1  Starker Befall mit Eichenprozessionsspinnern i...   \n",
-       "2  Sichere Schulwege digital: Das neue „Schulwegp...   \n",
-       "3  Modernisiertes Spielfeld am Cosmarweg stärkt B...   \n",
-       "4  Halt, Beratung und konkrete Hilfe für junge Me...   \n",
-       "\n",
-       "                                              pr_url filename_html  \\\n",
-       "0  https://www.berlin.de/ba-reinickendorf/aktuell...  1570899.html   \n",
-       "1  https://www.berlin.de/ba-charlottenburg-wilmer...  1570886.html   \n",
-       "2  https://www.berlin.de/ba-marzahn-hellersdorf/a...  1570882.html   \n",
-       "3  https://www.berlin.de/ba-spandau/aktuelles/pre...  1570883.html   \n",
-       "4  https://www.berlin.de/ba-marzahn-hellersdorf/a...  1570857.html   \n",
-       "\n",
-       "  filename_txt  n_tokens  \n",
-       "0  1570899.txt       729  \n",
-       "1  1570886.txt      1313  \n",
-       "2  1570882.txt       880  \n",
-       "3  1570883.txt       786  \n",
-       "4  1570857.txt       890  "
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# -- step 1: parse ONE results page -----------------------------------------\n",
     "search_soup = get_soup(FIRST_OUTPUT_PAGE)\n",
@@ -748,43 +641,86 @@
    },
    "outputs": [],
    "source": [
-    "# ╔═╡ 81_bulk_crawler\n",
-    "def crawl_all_pages(pages: int | None = None, sleep_s: float = 0.4) -> pd.DataFrame:\n",
-    "    \"\"\"\n",
-    "    Läuft über alle Treffer-Seiten, sammelt und lädt jede Pressemitteilung.\n",
-    "    Gibt ein DataFrame mit sämtlichen Metadaten zurück.\n",
-    "    \n",
-    "    *pages*  – Anzahl der Seiten; None → automatisch ermitteln  \n",
-    "    *sleep_s*– Höflichkeits-Delay zwischen Requests\n",
-    "    \"\"\"\n",
+    "# ╔═╡ 81_bulk_crawler_with_autosave\n",
+    "META_CSV   = DATA_DIR / \"metadata.csv\"\n",
+    "BUFFER_SIZE = 100          # wie viele Records, bevor wir in die CSV fluschen?\n",
+    "\n",
+    "def crawl_all_pages(\n",
+    "    pages: int | None = None,\n",
+    "    sleep_s: float = 0.4,\n",
+    "    buffer_size: int = BUFFER_SIZE,\n",
+    ") -> pd.DataFrame:\n",
+    "    \"\"\"Crawlt alle Trefferseiten, speichert Metadaten inkrementell nach CSV.\"\"\"\n",
     "    if pages is None:\n",
     "        pages = last_page_number()\n",
     "        print(f\"→ Letzte Trefferseite lautet {pages}\")\n",
     "\n",
-    "    all_records: list[dict] = []\n",
+    "    # --------------------------------------------------------------\n",
+    "    EXPECTED_HEADER = [\"id\", \"url\", \"date\", \"title\",\n",
+    "                       \"source\", \"filename_html\", \"filename\", \"n_tokens\"]\n",
+    "    \n",
+    "    existing_uids: set[str] = set()\n",
+    "    need_header = True                                           # default\n",
+    "    \n",
+    "    if META_CSV.exists() and META_CSV.stat().st_size > 0:\n",
+    "        # Prüfen, ob schon ein Header vorhanden ist\n",
+    "        with open(META_CSV, newline=\"\", encoding=\"utf-8\") as fh:\n",
+    "            first_line = fh.readline().strip()\n",
+    "            need_header = first_line.split(\",\") != EXPECTED_HEADER\n",
+    "    \n",
+    "        # UIDs nur einlesen, wenn Header vorhanden\n",
+    "        if not need_header:\n",
+    "            with open(META_CSV, newline=\"\", encoding=\"utf-8\") as fh:\n",
+    "                reader = csv.DictReader(fh)\n",
+    "                existing_uids = {row[\"id\"] for row in reader}\n",
+    "                logging.info(\"⚙️  %d vorhandene Datensätze erkannt.\", len(existing_uids))\n",
+    "        else:\n",
+    "            logging.warning(\"☝️  metadata.csv hat noch keinen Header – wird ergänzt.\")\n",
+    "    \n",
+    "    # Öffnen im richtigen Modus\n",
+    "    mode = \"a\" if META_CSV.exists() else \"w\"\n",
+    "    csvfile = open(META_CSV, mode, newline=\"\", encoding=\"utf-8\")\n",
+    "    writer = csv.DictWriter(csvfile, fieldnames=EXPECTED_HEADER)\n",
+    "    \n",
+    "    if need_header:\n",
+    "        writer.writeheader()\n",
+    "        csvfile.flush()\n",
+    "\n",
+    "    buffer: list[dict] = [] \n",
+    "    # --------------------------------------------------------------\n",
+    "\n",
+    "\n",
     "    for p in tqdm(range(1, pages + 1), desc=\"Result pages\"):\n",
-    "        soup = get_soup(page_url(p))\n",
-    "        rows = soup.select(\"table tbody tr\")\n",
-    "        \n",
-    "        for tr in rows:\n",
+    "        list_soup = get_soup(page_url(p))\n",
+    "        if list_soup is None:\n",
+    "            continue                                # ganze Seite überspringen\n",
+    "\n",
+    "        for tr in list_soup.select(\"table tbody tr\"):\n",
     "            cells = tr.find_all(\"td\")\n",
     "            if len(cells) < 3:\n",
-    "                continue  # Skip Leer-/Footer-Zeilen\n",
+    "                continue\n",
     "\n",
     "            date_txt = cells[0].get_text(strip=True)\n",
     "            anchor   = cells[1].find(\"a\", href=True)\n",
     "            if anchor is None:\n",
     "                continue\n",
-    "            title    = anchor.get_text(strip=True)\n",
-    "            pr_url   = \"https://www.berlin.de\" + anchor[\"href\"]\n",
     "            ressort  = cells[2].get_text(strip=True)\n",
-    "            uid      = anchor[\"href\"].split(\".\")[-2]  # z. B. 1570469\n",
-    "            html_fp  = HTML_DIR / f\"{uid}.html\"\n",
-    "            txt_fp   = TXT_DIR  / f\"{uid}.txt\"\n",
+    "            pr_url   = \"https://www.berlin.de\" + anchor[\"href\"]\n",
+    "            uid      = anchor[\"href\"].split(\".\")[-2]\n",
     "\n",
-    "            # ----- Detailseite nur laden, wenn noch nicht vorhanden -----------\n",
+    "            # Doppelte auslassen (wichtig für Resume!)\n",
+    "            if uid in existing_uids:\n",
+    "                continue # Datensatz bereits vorhanden → überspringen\n",
+    "\n",
+    "            html_fp = HTML_DIR / f\"{uid}.html\"\n",
+    "            txt_fp  = TXT_DIR  / f\"{uid}.txt\"\n",
+    "\n",
+    "            # -------- Detailseite laden (oder bei 404 überspringen) ----------\n",
+    "            pr_soup = get_soup(pr_url)\n",
+    "            if pr_soup is None:                   # 404 → keinen Record anlegen\n",
+    "                continue\n",
+    "\n",
     "            if not html_fp.exists():\n",
-    "                pr_soup = get_soup(pr_url)\n",
     "                html_fp.write_text(str(pr_soup), encoding=\"utf-8\")\n",
     "                body = (pr_soup.select_one(\"#article\") or\n",
     "                        pr_soup.select_one(\"#content\") or\n",
@@ -794,20 +730,37 @@
     "            else:\n",
     "                clean = txt_fp.read_text(encoding=\"utf-8\")\n",
     "\n",
-    "            all_records.append(\n",
-    "                dict(\n",
-    "                    date=date_txt,\n",
-    "                    ressort=ressort,\n",
-    "                    title=title,\n",
-    "                    pr_url=pr_url,\n",
-    "                    filename_html=html_fp.name,\n",
-    "                    filename_txt=txt_fp.name,\n",
-    "                    n_tokens=len(clean.split())\n",
-    "                )\n",
+    "            rec = dict(\n",
+    "                id=uid,\n",
+    "                url=pr_url,\n",
+    "                date=date_txt,\n",
+    "                title=anchor.get_text(strip=True),\n",
+    "                source=ressort,\n",
+    "                filename_html=html_fp.name,\n",
+    "                filename=txt_fp.name,        # nur „filename“\n",
+    "                n_tokens=len(clean.split())\n",
     "            )\n",
-    "            time.sleep(sleep_s)   # Höflichkeit: Delay pro Detail-Request\n",
+    "            buffer.append(rec)\n",
+    "            existing_uids.add(uid)                # Direkt markieren\n",
+    "            time.sleep(sleep_s)\n",
     "\n",
-    "    return pd.DataFrame(all_records)"
+    "            # ---------- Zwischenspeichern ----------------------------------\n",
+    "            if len(buffer) >= buffer_size:\n",
+    "                writer.writerows(buffer)\n",
+    "                csvfile.flush()\n",
+    "                buffer.clear()\n",
+    "\n",
+    "        # Optional: Auch nach *jeder* Seite flushen\n",
+    "        if buffer:\n",
+    "            writer.writerows(buffer)\n",
+    "            csvfile.flush()\n",
+    "            buffer.clear()\n",
+    "\n",
+    "    csvfile.close()\n",
+    "    logging.info(\"✅ Crawl abgeschlossen, CSV geschlossen.\")\n",
+    "\n",
+    "    # Finales DataFrame (für direkte Notebook-Analyse)\n",
+    "    return pd.read_csv(META_CSV, encoding=\"utf-8\")\n"
    ]
   },
   {
@@ -833,6 +786,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "74312ec1-fcf6-41b0-8d21-8383447c4d8b",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "META_CSV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "752fee21-6192-47a2-812b-ebc10e814bb8",
    "metadata": {
     "editable": true,
@@ -852,8 +821,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "7a8a3d76-7955-4e5a-9749-3c6d8ff42bbe",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b72a186-b6a2-4b1a-a09e-e311a0d4cf44",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -861,28 +831,8 @@
     },
     "tags": []
    },
-   "source": [
-    "### Export von Metadaten"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cb429b69-1a01-4a91-8764-f0e32839b234",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": [
-     "skip-execution"
-    ]
-   },
    "outputs": [],
-   "source": [
-    "metadata_path = DATA_DIR / \"metadata_updated.csv\"\n",
-    "df_all.to_csv()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
