adapted to new data

--- a/corpus_analysis/corpus-analysis_analysis.ipynb
+++ b/corpus_analysis/corpus-analysis_analysis.ipynb
@@ -36,6 +36,7 @@
     "from pathlib import Path\n",
     "from multiprocessing import Pool, cpu_count\n",
     "from functools import partial\n",
+    "import requests\n",
     "\n",
     "import pandas as pd\n",
     "import textstat\n",
@@ -127,7 +128,7 @@
    "outputs": [],
    "source": [
     "# set path to text\n",
-    "text_path = Path(r\"../data/txt/2011-01-04_id8787.txt\")\n",
+    "text_path = Path(r\"../data/txt/1000035.txt\")\n",
     "\n",
     "# read text\n",
     "text = text_path.read_text()\n",
@@ -283,7 +284,7 @@
    "id": "1650e5df-d9ba-4561-8e4e-fbb79727476e",
    "metadata": {},
    "source": [
-    "Ein Score zwischen 60 und 70 gibt eine durchschnittliche Schwierigkeit an, ungefährt äquivalent zum Niveau der 8. oder 9. Schulklasse. "
+    "Ein Score zwischen 30 und 50 gibt eine hohe Schwierigkeit an, ungefährt äquivalent zum Niveau von Bachelorstudierenden."
    ]
   },
   {
@@ -316,7 +317,7 @@
    "id": "0d66a162-4606-4133-906f-4b5fd2ffdd43",
    "metadata": {},
    "source": [
-    "Die aufs Deutsche ausgelegte Wiener Sachtextformel stuft den Text als leichter ein, etwa auf das Niveau der sechsten Klasse. "
+    "Die aufs Deutsche ausgelegte Wiener Sachtextformel stuft den Text auch als schwierig ein, etwa auf das Niveau der zwölften Klasse. "
    ]
   },
   {
@@ -348,7 +349,7 @@
    "id": "c3e75deb-f624-4c14-998a-0b218bb48032",
    "metadata": {},
    "source": [
-    "Laut dem ARI wird der Text als etwas schwieriger eingestuft und zwar auf das Niveau der 10. - 11. Klasse."
+    "Laut dem ARI wird der Text als äußerst schwieriger eingestuft und ist mit einem Score über 14 außerhalb der festgelegten Skala."
    ]
   },
   {
@@ -375,6 +376,14 @@
    "outputs": [],
    "source": [
     "textstat.coleman_liau_index(text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d18bc12c-99be-4c2a-953f-aa0524ce7b17",
+   "metadata": {},
+   "source": [
+    "Wie bei ARI liegt auch beim Coleman-Liau Index der Index außerhalb der angedachten Skala und ist somit als sehr schwierig zu beurteilen."
    ]
   },
   {
