--- a/corpus_analysis/corpus-analysis_visualization.ipynb
+++ b/corpus_analysis/corpus-analysis_visualization.ipynb
@@ -180,6 +180,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ffe82c02-20c5-4d96-9691-bb8f52c13e28",
+   "metadata": {},
+   "source": [
+    "Die Anzahl der Einträge anzeigen lassen:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e36aec62-ea54-45a6-a498-6a51fc830170",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(result_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "09fde2fa-5cd4-4962-94ab-cea5325c1206",
    "metadata": {},
    "source": [
@@ -501,14 +519,6 @@
     "# not interactive yet, updating needs to be fixed\n",
     "plot_with_js(results_filtered)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7ae95e6e-2a14-44d6-997a-52966c03d96d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
